--- a/web-developer.html
+++ b/web-developer.html
@@ -38,15 +38,19 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/automationanywhere/job/okFmbfwg'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=n1LfoMwG'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/automationanywhere/job/okFmbfwg'>Automation Anywhere Careers - Sr. Web Developer</a></h5> 
+<p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698456626-full-stack-web-developer-personal-assistance-solutions-team'>Bosch Group Full-Stack Web Developer / Personal Assistance Solutions Team | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698456626-full-stack-web-developer-personal-assistance-solutions-team'>Bosch Group Full-Stack Web Developer / Personal Assistance Solutions Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://proximity.applytojob.com/apply/s45lpoSq1J/Senior-React-Web-Developer-Developer'>Senior React Web Developer Developer - ProximityCR - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proximity.applytojob.com/apply/s45lpoSq1J/Senior-React-Web-Developer-Developer'>Senior React Web Developer Developer - ProximityCR - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -88,7 +92,7 @@
 <p><span class="badge badge-light">United States Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/indianapolis/strategic-market-director/46131?utm_content=104387970&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<h5><a href='https://artisantalent.com/jobs/indianapolis/strategic-market-director/46131?utm_content=104387970&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -144,7 +148,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349571-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -230,7 +234,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/silver-peak/job/o3w1afwu'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/silver-peak/job/o3w1afwu'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -328,7 +332,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://enmacc.join.com/jobs/456696-senior-java-web-developer-m-f-d'>Job @ Enmacc (Munich): Senior Java Web Developer (... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://enmacc.join.com/jobs/456696-senior-java-web-developer-m-f-d'>Job @ Enmacc (Munich): Senior Java Web Developer (... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -352,7 +356,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e573811'>Stellenangebot: Pflichtpraktikant/Werkstudent (m/w/d) im Bereich Web Development (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e573811'>Stellenangebot: Pflichtpraktikant/Werkstudent (m/w/d) im Bereich Web Development (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
@@ -409,7 +413,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
       Senior Web Developer at Persado - San Franciso, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -429,7 +433,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sportradar.join.com/jobs/451978-web-developer'>Job @ 1991 (Vienna): Web Developer | JOIN</a></h5> 
+<h5><a href='https://sportradar.join.com/jobs/451978-web-developer'>Job @ 1991 (Vienna): Web Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -437,7 +441,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.powderkegwebdesign.com/about/careers/'>Web Design &amp; Development Careers - Powderkeg</a></h5> 
+<h5><a href='https://www.powderkegwebdesign.com/about/careers/'>Web Design &amp; Development Careers - Powderkeg</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -453,10 +457,6 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <hr/>
 <h5><a href='https://www.php-resource.de/jobs/job,45531,Praktikantin-Web-Application-Development.htm'>Praktikant*in Web Application Development Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oWVTafwE&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nLqZiMwJ'>ServiceNow Careers - Senior Marketing Web Developer</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
 
